--- a/session-service/build.gradle
+++ b/session-service/build.gradle
@@ -29,9 +29,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:3.2.7"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:mongodb'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.2.7'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
